force-app/main/default/objects/Tariff__c/Tariff__c.object-meta.xml
<CustomObject>
    <description>Available electricity/gas tariff (plan) a customer can be on.</description>
    <label>Tariff</label>
    <pluralLabel>Tariffs</pluralLabel>
    <nameField>
        <label>Tariff Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>