force-app/main/default/objects/Tariff__c/fields/Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>Base_Fee__c</fullName>
    <label>Base Fee (monthly)</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>