force-app/main/default/objects/Tariff__c/fields/Green__c.field-meta.xml
<CustomField>
    <fullName>Green__c</fullName>
    <label>Green (Ökostrom)</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>