force-app/main/default/objects/Tariff__c/fields/Price_per_kWh__c.field-meta.xml
<CustomField>
  <fullName>Price_per_kWh__c</fullName>
  <label>Price per kWh</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>4</scale>
</CustomField>